ServiceWorker: Pass client_type by value in for-loops

Bug: 902201
Change-Id: I55613be57c363aa9d396108826e21643006ad224
Reviewed-on: https://chromium-review.googlesource.com/c/1319221
Reviewed-by: Matt Falkenhagen <falken@chromium.org>
Commit-Queue: Hiroki Nakagawa <nhiroki@chromium.org>
Cr-Commit-Position: refs/heads/master@{#605626}
Former-commit-id: 7fdd0287a1cf7483dff3917ef91767101bc99fb7